--- a/UniFiler10/Styles/Styles.xaml
+++ b/UniFiler10/Styles/Styles.xaml
@@ -33,6 +33,7 @@
 	<x:Double x:Key="LandscapeItemWidthMinusPanelPadding">184</x:Double>
 	<x:Double x:Key="LandscapeThreeQuartersItemWidth">150</x:Double>
     <x:Double x:Key="LandscapeItemHeight">80</x:Double>
+	<x:Double x:Key="LandscapeLargeItemHeight">120</x:Double>
     <GridLength x:Key="LandscapeLargeItemWidth_ForGrid">300</GridLength>
     <GridLength x:Key="LandscapeItemWidth_ForGrid">200</GridLength>
     <GridLength x:Key="LandscapeItemHeight_ForGrid">80</GridLength>
