--- a/UniFiler10/Views/BinderCoverView.xaml
+++ b/UniFiler10/Views/BinderCoverView.xaml
@@ -82,7 +82,7 @@
 				PlaceholderText="..."
 				Width="{StaticResource LandscapeItemWidth}"
 				Height="{StaticResource LandscapeItemHeight}"
-				Style="{StaticResource LolloTextBoxGrowsInHeightAndWidthStyle}"
+				Style="{StaticResource LolloTextBoxStyle}"
 				VerticalContentAlignment="Bottom"
 				VerticalAlignment="Top"/>-->
 
@@ -344,7 +344,7 @@
 				BorderThickness="0"
 				Width="{StaticResource LandscapeItemWidth}"
 				Height="{StaticResource LandscapeLargeItemHeight}"
-				Style="{StaticResource LolloTextBoxGrowsInHeightAndWidthStyle}"
+				Style="{StaticResource LolloTextBoxStyle}"
 				IsReadOnly="True"
 				IsEmptyValueAllowedEvenIfNotInList="False"
 				Visibility="{Binding IsByCatFoldersPaneOpen, Converter={StaticResource BooleanToVisibleConverter}, Mode=OneWay}"
@@ -372,7 +372,7 @@
 					BorderThickness="0"
 					Width="{StaticResource LandscapeItemWidth}"
 					Height="{StaticResource LandscapeLargeItemHeight}"
-					Style="{StaticResource LolloTextBoxGrowsInHeightAndWidthStyle}"
+					Style="{StaticResource LolloTextBoxStyle}"
 					IsReadOnly="True"
 					IsEmptyValueAllowedEvenIfNotInList="False"
 					ItemsSource="{Binding MetaBriefcase.Categories, Mode=OneWay}"
@@ -395,7 +395,7 @@
 					BorderThickness="0"
 					Width="{StaticResource LandscapeItemWidth}"
 					Height="{StaticResource LandscapeLargeItemHeight}"
-					Style="{StaticResource LolloTextBoxGrowsInHeightAndWidthStyle}"
+					Style="{StaticResource LolloTextBoxStyle}"
 					IsReadOnly="True"
 					IsEmptyValueAllowedEvenIfNotInList="False"
 					ItemsSource="{Binding FldDscsInCat, Mode=OneWay}"
@@ -418,7 +418,7 @@
 					BorderThickness="0"
 					Width="{StaticResource LandscapeItemWidth}"
 					Height="{StaticResource LandscapeLargeItemHeight}"
-					Style="{StaticResource LolloTextBoxGrowsInHeightAndWidthStyle}"
+					Style="{StaticResource LolloTextBoxStyle}"
 					IsReadOnly="True"
 					IsEmptyValueAllowedEvenIfNotInList="False"
 					ItemsSource="{Binding FldValsInFldDscs, Mode=OneWay}"
