--- a/UniFiler10/Controlz/LolloTextBox.xaml
+++ b/UniFiler10/Controlz/LolloTextBox.xaml
@@ -5,7 +5,7 @@
 
 	<x:Double x:Key="LTBDecorationsSize">34</x:Double>
 
-	<Style x:Key="LolloTextBoxGrowsInHeightAndWidthStyle" TargetType="ctl:LolloTextBox">
+	<Style x:Key="LolloTextBoxStyle" TargetType="ctl:LolloTextBox">
 		<Setter Property="MinWidth" Value="{ThemeResource TextControlThemeMinWidth}"/>
 		<Setter Property="MinHeight" Value="{ThemeResource TextControlThemeMinHeight}"/>
 		<Setter Property="Foreground" Value="{ThemeResource SystemControlForegroundBaseHighBrush}"/>
@@ -21,7 +21,7 @@
 		<Setter Property="VerticalAlignment" Value="Stretch"/>
 		<Setter Property="HorizontalContentAlignment" Value="Stretch"/>
 		<Setter Property="VerticalContentAlignment" Value="Center"/>
-		<Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled"/>
+		<Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Auto"/>
 		<Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Auto"/>
 		<Setter Property="ScrollViewer.IsDeferredScrollingEnabled" Value="False"/>
 		<Setter Property="Padding" Value="{ThemeResource TextControlThemePadding}"/>
@@ -212,6 +212,7 @@
 						<Border x:Name="BackgroundElement"
                             Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="1"
                             Margin="{TemplateBinding BorderThickness}" Opacity="{ThemeResource TextControlBackgroundRestOpacity}" />
+						<!--VerticalAlignment="Center"-->
 						<ScrollViewer x:Name="ContentElement" 
                             Grid.Column="2" Grid.Row="1"
                             AutomationProperties.AccessibilityView="Raw" 
@@ -219,14 +220,15 @@
 							HorizontalScrollMode="{TemplateBinding ScrollViewer.HorizontalScrollMode}" HorizontalScrollBarVisibility="{TemplateBinding ScrollViewer.HorizontalScrollBarVisibility}" IsHorizontalRailEnabled="{TemplateBinding ScrollViewer.IsHorizontalRailEnabled}"
 							VerticalScrollMode="{TemplateBinding ScrollViewer.VerticalScrollMode}" ZoomMode="Disabled" VerticalScrollBarVisibility="{TemplateBinding ScrollViewer.VerticalScrollBarVisibility}" IsVerticalRailEnabled="{TemplateBinding ScrollViewer.IsVerticalRailEnabled}"
 							IsDeferredScrollingEnabled="{TemplateBinding ScrollViewer.IsDeferredScrollingEnabled}"
-							VerticalAlignment="Center"
+							VerticalAlignment="Stretch"
 							HorizontalAlignment="Stretch"
 							VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
 							HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
 							Margin="{TemplateBinding BorderThickness}" Padding="{TemplateBinding Padding}"/>
+						<!--VerticalAlignment="Center"-->
 						<ContentControl x:Name="PlaceholderTextContentPresenter" 
                             Grid.Column="2" Grid.Row="1"
-							VerticalAlignment="Center"
+							VerticalAlignment="Stretch"
 							HorizontalAlignment="Stretch"
 							VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
 							HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
@@ -307,8 +309,8 @@
 		</Setter>
 	</Style>
 
-	<Style x:Key="LolloTextBoxGrowsInHeightStyle" TargetType="ctl:LolloTextBox" BasedOn="{StaticResource LolloTextBoxGrowsInHeightAndWidthStyle}">
-		<!--<Setter Property="HorizontalAlignment" Value="Left"/>-->
+	<!--<Style x:Key="LolloTextBoxGrowsInHeightStyle" TargetType="ctl:LolloTextBox" BasedOn="{StaticResource LolloTextBoxStyle}">
+		--><!--<Setter Property="HorizontalAlignment" Value="Left"/>--><!--
 		<Setter Property="VerticalAlignment" Value="Top"/>
-	</Style>
+	</Style>-->
 </ResourceDictionary>
